Updated the dashboard code

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <div class="sidebar">
             <h2>Dashboard</h2>
             <ul class="navigation">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Messages</a></li>
-                <li><a href="#">History</a></li>
-                <li><a href="#">Tasks</a></li>
-                <li><a href="#">Communities</a></li>
-                <li><a href="#">Settings</a></li>
-                <li><a href="#">Support</a></li>
-                <li><a href="#">Privacy</a></li>
+                <li><img src="assets/icons/home.svg" alt="Home"><a href="#">Home</a></li>
+                <li><img src="assets/icons/profile.svg" alt="Home"><a href="#">Profile</a></li>
+                <li><img src="assets/icons/messages.svg" alt="Home"><a href="#">Messages</a></li>
+                <li><img src="assets/icons/history.svg" alt="Home"><a href="#">History</a></li>
+                <li><img src="assets/icons/task.svg" alt="Home"><a href="#">Tasks</a></li>
+                <li><img src="assets/icons/home.svg" alt="Home"><a href="#">Communities</a></li>
+                <li><img src="assets/icons/community.svg" alt="Home"><a href="#">Settings</a></li>
+                <li><img src="assets/icons/support.svg" alt="Home"><a href="#">Support</a></li>
+                <li><img src="assets/icons/privacy.svg" alt="Home"><a href="#">Privacy</a></li>
               </ul>
         </div>
 
@@ -32,7 +32,7 @@
               </div>
               <div class="user-info">
                 <img src="user-avatar.png" alt="User Avatar">
-                <span>Morgan Oakley (@morgan)</span>
+                <span>Jayesh Chindarkar (@the_jac)</span>
               </div>
               <div class="header-buttons">
                 <button>New</button>
@@ -45,12 +45,60 @@
         <div class="main-content">
             <div class="projects">
                 <h3>Your Projects</h3>
+                <div class="project-cards">
+                    <div class="card">
+                      <h3>Super Cool Project</h3>
+                      <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                      <div class="icons">★ ☆ 👁️ 🔗</div>
+                    </div>
+                    <div class="card">
+                      <h3>Less Cool Project</h3>
+                      <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt.</p>
+                      <div class="icons">★ ☆ 👁️ 🔗</div>
+                    </div>
+                    <div class="card">
+                      <h3>Impossible App</h3>
+                      <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+                      <div class="icons">★ ☆ 👁️ 🔗</div>
+                    </div>
+                    <div class="card">
+                      <h3>Easy Peasy App</h3>
+                      <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam.</p>
+                      <div class="icons">★ ☆ 👁️ 🔗</div>
+                    </div>
+                    <div class="card">
+                      <h3>Ad Blocker</h3>
+                      <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis.</p>
+                      <div class="icons">★ ☆ 👁️ 🔗</div>
+                    </div>
+                    <div class="card">
+                      <h3>Money Maker</h3>
+                      <p>Pellentesque mollis nec sem vel aliquam.</p>
+                      <div class="icons">★ ☆ 👁️ 🔗</div>
+                    </div>
+                  </div>
             </div>
             <div class="announcements">
                 <h3>Announcements</h3>
+                <div class="announcement-item">
+                    <h3>Site Maintenance</h3>
+                    <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac...</p>
+                  </div>
+                  <div class="announcement-item">
+                    <h3>Community Share Day</h3>
+                    <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero...</p>
+                  </div>
+                  <div class="announcement-item">
+                    <h3>Updated Privacy Policy</h3>
+                    <p>Phasellus efficitur nisi eget elit consectetur...</p>
+                  </div>
             </div>
             <div class="trending">
                 <h3>Trending</h3>
+                <div class="trending-item">@tegan - World Peace Builder</div>
+                <div class="trending-item">@morgan - Super Cool Project</div>
+                <div class="trending-item">@kendall - Life Changing App</div>
+                <div class="trending-item">@alex - No Traffic Maker</div>
             </div>
         </div>
     </div>
